--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,56 @@
-# Prerequisites
-*.d
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+# Folder config file
+Desktop.ini
 
-# Precompiled Headers
-*.gch
-*.pch
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
 
-# Fortran module files
-*.mod
-*.smod
+# Windows shortcuts
+*.lnk
 
-# Compiled Static libraries
-*.lai
-*.la
+# =========================
+# Operating System Files
+# =========================
+
+# OSX
+# =========================
+
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# Compiled source #
+###################
 *.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+*.o
+*.self
+*.elf
+*.pkg
+build/
+ppu/
+lib/
+obj/
+*.zip
